# tokkit

./: .gitignore  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: ci.yml
docs/: POSITIONING_AND_ROADMAP.md  POSITIONING_AND_ROADMAP.zh-CN.md
src/tokkit/: cli.py  clients.py  db.py  ingest_augment.py  tok.py
src/tokstat/: cli.py  pricing.py  tok.py
tools/: README.md
tools/mem/: README.md  pyproject.toml
tools/mem/src/memview/: cli.py
tools/mem/tests/: test_cli.py
tools/tokkit/: README.md  README.zh-CN.md
tools/tokkit/docs/: GITHUB_PUBLISH_PLAN.md  PRODUCT_BRIEF.md
tools/tokkit/docs/assets/: tokkit-demo-5x-claude-opus.html
tools/tokkit/src/tokkit/: cli.py  clients.py  db.py  html_report.py  ingest_augment_history.py  ingest_claude_code.py  ingest_codex.py  pricing.py  scan_planner.py  tok.py
tools/tokkit/tests/: test_html_report.py  test_incremental_scans.py  test_pricing.py  test_report_rendering.py  test_scan_planner.py  test_terminal_classification.py
tools/vidbrief/: .gitignore  README.md  pyproject.toml
tools/vidbrief/src/vidbrief/: ai.py  audio.py  cli.py  downloader.py  subtitles.py  tui.py  utils.py  workflow.py
tools/vidbrief/tests/: test_ai.py  test_cli.py  test_output_dir.py  test_subtitles.py  test_tui.py  test_utils_and_downloader.py
tools/yao-scai-cli/: AGENTS.md  README.md  install.sh  scai.py
